# BirdNET-Py

./: README.md  example.py  pyproject.toml  requirements.txt
birdnetpy/: core.py  labels_filter_non_uk.txt  labels_non_birds.txt
examples/: demo.py
src/birdnetpy/: core.py
